--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,7 +2,14 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
-
+//colors
+$nursing: #00a9bc;
+$medicine: #e51837;
+$school: #8cc63f;
+$social_work: #ffcb00;
+$dark_grey: #1a1a1a;
+$marker_: #ffe202;
+$swcos_red: rgba(229, 25, 55,1);
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -89,4 +96,62 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
+}
+
+.school{
+  visibility: hidden;
+}
+// background shape
+.school__label {
+  background-color: rgba(26, 26, 26, 0);
+  padding: 9px;
+  border-radius: 70px;
+  display: inline-block;
+  position: relative;
+  margin-right: 30px;
+  width: 58px;
+  height: 30px;
+}
+
+// background color
+.school__label:after {
+  content: '';
+  position: absolute;
+  background: lightgray;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 70px;
+}
+
+
+.school:checked + .school__label:after {
+  content: '';
+  //background: $social_work;
+  background: $marker_;
+}
+.school:checked + .school__label[id="test"]:after {
+  content: '';
+  background: $swcos_red;
+}
+
+.school__label:before {
+  content: '';
+  position: absolute;
+  background: white;
+  top: 2px;
+  left: 2px;
+  z-index: 2;
+  width: 25px;
+  height: 25px;
+  border-radius: 100px;
+}
+
+.school:checked + .school__label:before {
+  left: 31px;
+}
+
+.school__label:after,.school__label:before {
+  -webkit-transition: background 0.2s ease-out, left 0.2s ease-out;
 }
