updated color codes for charts

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,8 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
+@import "_chartist-settings.scss";
+@import "chartist/dist/scss/chartist.scss";
 //colors
 $nursing: #00a9bc;
 $medicine: #e51837;
