--- a/app/styles/_chartist-settings.scss
+++ b/app/styles/_chartist-settings.scss
@@ -63,7 +63,23 @@ $ct-include-alternative-responsive-containers: $ct-include-classes !default;
 // Series names and colors. This can be extended or customized as desired. Just add more series and colors.
 $ct-series-names: (a, b, c, d, e, f, g, h, i, j, k, l, m, n, o) !default;
 $ct-series-colors: (
-  #d70206,
+  #e51837,
+  #00a9bc,
+  #ffcb00,
+  #8cc63f,
+  #0544d3,
+  #6b0392,
+  #1a1a1a,
+  #f05b4f,
+  #dda458,
+  #eacf7d,
+  #86797d,
+  #b2c326,
+  #6188e2,
+  #a748ca,
+  #a748ca
+) !default;
+/*
   #f05b4f,
   #f4c63d,
   #d17905,
@@ -77,5 +93,4 @@ $ct-series-colors: (
   #86797d,
   #b2c326,
   #6188e2,
-  #a748ca
-) !default;
+  #a748ca*/
