--- a/app/views/map.html
+++ b/app/views/map.html
@@ -2,6 +2,7 @@
 
 <div class="modal-body">
   <div class="row">
+  <button class="btn btn-default swcos-close glyphicon glyphicon-remove" ng-click="ok()"></button>
     <div class="col-md-6">
 
       <h1>{{site.Site}}</h1>
@@ -31,19 +32,19 @@
       </div>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-md-6 bars">
+    <h1>What&#39s Happening Here</h1>
     <h4>Median Income</h4>
     <chartist class="ct-chart" chartist-data="incomeData" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
-    <h4>School Absenteeism</h4>
+    <h4 class="bar-sec">School Absenteeism</h4>
     <chartist class="ct-chart" chartist-data="schoolData" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
-    <h4>Life Expectancy</h4>
+    <h4 class="bar-sec">Life Expectancy</h4>
     <chartist class="ct-chart" chartist-data="lifeData" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
     </div>
 
   </div>
 </div>
 <div class="modal-footer">
-<button class="btn btn-default swcos-close" ng-click="ok()">Close</button>
 
 </div>
 </script>
@@ -64,7 +65,7 @@
       <ul class="list-group">
         <li class="list-group-item" ng-repeat="school in siteSchools">
           <div class="row">
-            <div class="col-md-6" style="padding-top:10%;">
+            <div class="col-md-6" style="padding-top:2%;">
               {{school}}
             </div>
             <div class="col-md-6">
@@ -80,7 +81,7 @@
         <ul class="list-group">
           <li class="list-group-item" ng-repeat="affiliate in siteAffiliates">
             <div class="row">
-              <div class="col-md-6" style="padding-top:10%;">
+              <div class="col-md-6" style="padding-top:2%;">
                 {{affiliate}}
               </div>
               <div class="col-md-6">
