--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,15 +27,38 @@ body {
 }
 
 body.modal-open .supreme-container{
-  -webkit-filter: blur(15px);
-  -moz-filter: blur(15px);
   -o-filter: blur(15px);
   -ms-filter: blur(15px);
   filter: blur(15px);
+  filter: url("data:image/svg+xml;utf9,<svg%20version='1.1'%20xmlns='http://www.w3.org/2000/svg'><filter%20id='blur'><feGaussianBlur%20stdDeviation='10'%20/></filter></svg>#blur");
+  filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='10');
+  -webkit-filter: blur(15px);
 
   -webkit-box-shadow: inset 6px 6px 31px 0px rgba(135,135,135,0.71);
   -moz-box-shadow: inset 6px 6px 31px 0px rgba(135,135,135,0.71);
   box-shadow: inset 6px 6px 31px 0px rgba(135,135,135,0.71);
+}
+
+.col-md-2 > .help-block {
+  text-align:center;
+}
+.ackTitle {
+  text-align:center;
+}
+p > span {
+  display:inline-block;
+  width:5em;
+  height:5px;
+  border-top:1px solid #737373;
+  &:first-child {
+    margin-right:5px;
+  }
+  &:last-child{
+    margin-left:5px;
+  }
+  &:nth-child(3){
+    background-color:$social_work;
+  }
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -115,7 +138,10 @@ body.modal-open .supreme-container{
 
 .list-group-item {
   padding:10px 5px;
+  padding-bottom:0px !important;
+
 }
+
 .school{
   visibility: hidden;
 }
@@ -151,7 +177,7 @@ body.modal-open .supreme-container{
 }
 .school:checked + .school__label[id="test"]:after {
   content: '';
-  background: $swcos_red;
+  background: #00a9bc;
 }
 
 .school__label:before {
@@ -172,6 +198,7 @@ body.modal-open .supreme-container{
 
 .school__label:after,.school__label:before {
   -webkit-transition: background 0.2s ease-out, left 0.2s ease-out;
+  -moz-transition: background 0.2s ease-out, left 0.2s ease-out;
 }
 
 .modal-dialog {
@@ -209,4 +236,32 @@ body.modal-open .supreme-container{
 }.bar-sec {
   padding-top:10px;
   border-top:1px solid lightgray;
+}
+.ct-bar {
+  stroke-width:23px !important;
+}.ct-label {
+  display:none;
+}
+.school-label{
+  margin:-4px;
+  width:20px;
+  height:20px;
+  border:none;
+}
+p:nth-child(1) .school-label{
+  background-color:$medicine;
+}
+p:nth-child(2) .school-label{
+  background-color:$nursing;
+}
+p:nth-child(3) .school-label{
+  background-color:$social_work;
+}
+
+
+
+
+.no-student-data {
+  display:inherit;
+  padding-top:30%;
 }
