--- a/app/views/map.html
+++ b/app/views/map.html
@@ -10,21 +10,24 @@
       <p ng-hide="site['Site Description']">No site description provided.</p>
       <h4>UMB Students Involved</h4>
 
+      <!-- first pie -->
       <div class="col-md-6">
         <chartist class="ct-chart ct-golden-section" chartist-data="data" chartist-chart-type="Pie"></chartist>
-        <h4>{{stud_Sum}} Students</h4>
-        <div style="float:left;">
-          <p ng-repeat="label in dataOutLabels">{{label}}</p>
+        <h4>{{stud_sum}} Students</h4>
+        <div style="float:left;padding-left:0px;">
+          <p ng-repeat="label in dataOutLabels"><span class="school-label"></span>{{label}}</p>
         </div>
-        <div style="float:right;">
+        <div style="float:left;padding-left:5px;">
           <p ng-repeat="key in data.series">{{key}}</p>
         </div>
       </div>
+
+      <!-- second pie -->
       <div class="col-md-6">
       <chartist class="ct-chart ct-golden-section" chartist-data="dataDiscipline" chartist-chart-type="Pie"></chartist>
       <h4>SWCOS Disciplines</h4>
       <div style="float:left;">
-      <p ng-repeat="label in dataDisciplineOutLabels">{{label}}</p>
+      <p ng-repeat="label in dataDisciplineOutLabels"><span class="school-label"></span>{{label}}</p>
       </div>
       <div style="float:right;">
       <p ng-repeat="key in dataDiscipline.series">{{key}}</p>
@@ -35,11 +38,11 @@
     <div class="col-md-6 bars">
     <h1>What&#39s Happening Here</h1>
     <h4>Median Income</h4>
-    <chartist class="ct-chart" chartist-data="incomeData" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
+    <chartist class="ct-chart ct-golden-section" chartist-data="incomeData" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
     <h4 class="bar-sec">School Absenteeism</h4>
-    <chartist class="ct-chart" chartist-data="schoolData" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
+    <chartist class="ct-chart ct-golden-section" chartist-data="schoolData" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
     <h4 class="bar-sec">Life Expectancy</h4>
-    <chartist class="ct-chart" chartist-data="lifeData" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
+    <chartist class="ct-chart ct-golden-section" chartist-data="lifeData" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
     </div>
 
   </div>
@@ -49,8 +52,12 @@
 </div>
 </script>
 
+
+
 <div class="container">
   <div class="row well">
+    <p class="ackTitle"><strong>Interactive Map</strong> provided thanks to the generous grant from the
+       Joseph and Harvey Meyerhoff Family Charitable Funds and the Social Work Community Outreach Services (SWCOS)</p>
     <div class="col-lg-9">
       <ui-gmap-google-map center='map.center' zoom='map.zoom'>
 
@@ -60,8 +67,8 @@
       </ui-gmap-google-map>
     </div>
 
-    <div class="col-md-2 col-lg-3 col-sm-6">
-      <p class="help-block">Filter By School</p>
+    <div class="col-lg-3 col-sm-6">
+      <p class="help-block"><span></span>Filter By School<span></span></p>
       <ul class="list-group">
         <li class="list-group-item" ng-repeat="school in siteSchools">
           <div class="row">
@@ -77,7 +84,7 @@
       </ul>
 
 
-        <p class="help-block">Filter By Affiliate</p>
+        <p class="help-block"><span></span>Filter By Affiliate<span></span></p>
         <ul class="list-group">
           <li class="list-group-item" ng-repeat="affiliate in siteAffiliates">
             <div class="row">
