--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -39,9 +39,33 @@ body.modal-open .supreme-container{
   box-shadow: inset 6px 6px 31px 0px rgba(135,135,135,0.71);
 }
 
-.col-md-2 > .help-block {
+.header-container{
+  //ackground:rgba(163, 160, 99, 0.05);
   text-align:center;
+  padding-top:10px;
+  padding-bottom:30px;
+  margin-bottom:25px;
+  border-radius:4px;
 }
+.header-container-inner{
+  margin:0 auto;
+  width:55%;
+  max-width:600px;
+}
+.page-header {
+  width:100%;
+  margin-top:20px;
+  margin-bottom:10px;
+  padding-bottom:0px;
+}
+.help-block{
+  margin:0 auto;
+  width:100%;
+}
+.well {
+  background:url("/images/main-background-umb.png") center center repeat;
+}
+
 .ackTitle {
   text-align:center;
 }
@@ -112,7 +136,7 @@ p > span {
     margin-top: 28px;
   }
 }
-.angular-google-map-container { height: 650px; }
+.angular-google-map-container { height: 750px; }
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
@@ -231,14 +255,38 @@ p > span {
   border:none;
   box-shadow:none;
 }
+.bar-wrapper{
+  padding: 10px;
+  border-top: 1px solid rgba(51, 51, 51, 0.2);
+  border-left: 1px solid rgba(51, 51, 51, 0.2);
+  border-right:1px solid rgba(51, 51, 51, 0.2);
+  h4{
+    margin-top:0px;
+  }
+}
+.bw-last{
+  border-bottom:1px solid rgba(51, 51, 51, 0.2);
+}
+
+.ct-label{
+  font-size:1.2rem !important;
+}
 .bars {
   text-align:center;
 }.bar-sec {
   padding-top:10px;
   border-top:1px solid lightgray;
+  border-left:1px solid lightgray;
 }
 .ct-bar {
+  stroke:#1a1a1a !important;
   stroke-width:23px !important;
+  &:nth-child(2){
+    stroke:rgba(26, 26, 26, 0.85) !important;
+  }
+  &:nth-child(3){
+    stroke:rgba(26, 26, 26, 0.65) !important;
+  }
 }.ct-label {
   display:none;
 }
@@ -257,8 +305,6 @@ p:nth-child(2) .school-label{
 p:nth-child(3) .school-label{
   background-color:$social_work;
 }
-
-
 
 
 .no-student-data {
