IE map fix hopefully

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -138,6 +138,10 @@ p > span {
     margin-top: 28px;
   }
 }
+.gm-style {
+  width:815px !important;
+  height:700px !important;
+}
 .angular-google-map-container {
   height: 832px;
   border:1px solid #D8D6D6;
