--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -142,7 +142,10 @@ p > span {
   width:815px !important;
   height:700px !important;
 }*/
-
+.glyphicon-info-sign{
+  font-size:1.7em;
+  color:$marker_;
+}
 .angular-google-map-container {
   height: 832px;
   max-height:832px;
@@ -283,6 +286,9 @@ p > span {
   border-bottom:1px solid rgba(51, 51, 51, 0.2);
 }
 
+.ct-label.ct-horizontal {
+  text-align:center !important;
+}
 .ct-label{
   font-size:1.2rem !important;
 }
