--- a/app/views/map.html
+++ b/app/views/map.html
@@ -1,5 +1,5 @@
+<!-- MODAL -->
 <script type="text/ng-template" id="displaySiteData.html">
-
 <div class="modal-body">
   <div class="row">
   <button class="btn btn-default swcos-close glyphicon glyphicon-remove" ng-click="ok()"></button>
@@ -9,27 +9,29 @@
         <!-- left side of modal -->
         <div class="col-md-5">
           <h1>{{site.Site}}</h1>
+          <p><strong>Affiliate Contact Name: </strong>{{site['Affiliate contact name']}}</p>
+          <p><strong>Affiliate Contact Email: </strong>{{site['Affiliate contact email']}}</p>
           <p>{{site['Site Description']}}</p>
           <p ng-hide="site['Site Description']">No site description provided.</p>
-          <h4>UMB Students Involved</h4>
+          <h4>{{stud_sum}} UMB Student<span ng-hide="stud_sum == 1">s</span> Involved</h4>
           <div class="row">
             <!-- left pie -->
             <div class="col-md-6">
               <chartist class="ct-chart ct-golden-section" chartist-data="data" chartist-chart-type="Pie"></chartist>
-              <h4>{{stud_sum}} Students</h4>
-              <div class="row">
-                <div class="col-sm-7">
-                  <p ng-repeat="label in dataOutLabels"><span class="school-label"></span>{{label}}</p>
-                </div>
-                <div class="col-sm-2">
-                  <p ng-repeat="key in data.series">{{key}}</p>
-                </div>
-              </div>
+              <h4>By School</h4>
+              <ul class="list-group">
+                <li class="list-group-item" ng-repeat="label in dataOutLabels">
+                  <span class="badge" ng-repeat="key in data.series">{{key}}</span>
+                  {{label}}<!-- school-label -->
+          
+
+                </li>
+              </ul>
             </div>
             <!-- right pie -->
             <div class="col-md-6">
               <chartist class="ct-chart ct-golden-section" chartist-data="dataDiscipline" chartist-chart-type="Pie"></chartist>
-              <h4>{{disc_sum}} SWCOS Discipline</h4>
+              <h4>By Discipline</h4>
               <div class="row">
                 <div class="col-sm-12">
                   <p ng-repeat="label in dataDisciplineOutLabels"><span class="school-label"></span>{{label}}</p>
@@ -44,20 +46,21 @@
         <!-- middle spacer -->
         <div class="col-md-2">
         </div>
-        <!-- right side of modal -->
+        <!-- right side of modal - bar charts -->
         <div class="col-md-5">
           <h1>What&#39s Happening Here</h1>
+          <h4>{{site.CSA}}</h4>
           <div class="bar-wrapper">
-            <h4>Medium Income</h4>
-            <chartist class="ct-chart ct-golden-section" chartist-data="incomeData" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
+            <h4>Median Income</h4>
+            <chartist class="ct-chart ct-golden-section" chartist-data="incomeData" chartist-events="" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
           </div>
           <div class="bar-wrapper">
             <h4>School Absenteeism</h4>
-            <chartist class="ct-chart ct-golden-section" chartist-data="schoolData" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
+            <chartist class="ct-chart ct-golden-section" chartist-data="schoolData" chartist-events="" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
           </div>
           <div class="bar-wrapper bw-last">
             <h4>Life Expectancy</h4>
-            <chartist class="ct-chart ct-golden-section" chartist-data="lifeData" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
+            <chartist class="ct-chart ct-golden-section" chartist-data="lifeData" chartist-events="" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
           </div>
         </div>
       </div>
@@ -65,24 +68,25 @@
 
   </div>
 </div>
-
 </script>
+<!-- END MODAL -->
 
-
-
+<!-- MAP -->
 <div class="container">
   <div class="row well">
     <div class="header-container">
       <div class="header-container-inner">
         <div class="page-header">
-          <h1>UMB Students Working in Baltimore</h1>
+          <h1>University of Maryland Baltimore Students Working in Baltimore</h1>
         </div>
-        <p class="help-block">Interactive Map provided in thanks to the generous grant from the
-        Joseph and Harvey Meyerhoff Family Charitable Funds and the Social Work Community Outreach Services (SWCOS)</p>
+        <p class="help-block">Interactive Map provided in thanks to a generous grant from the
+        Joseph and Harvey Meyerhoff Family Charitable Funds and the Social Work Community Outreach Service (SWCOS)</p>
       </div>
       </div>
 
     <div class="col-lg-9">
+      <span popover-placement="right" class="glyphicon glyphicon-info-sign" popover="Click on a yellow marker within the map to display information about that Site"></span>
+
       <ui-gmap-google-map center='map.center' zoom='map.zoom'>
 
         <ui-gmap-markers models="siteMarkers" click="'displaySiteData'" coords="'self'" icon="'icon'">
