--- a/app/views/map.html
+++ b/app/views/map.html
@@ -9,11 +9,12 @@
         <!-- left side of modal -->
         <div class="col-md-5">
           <h1>{{site.Site}}</h1>
+          <h4>{{site.CSA}}</h4>
           <p><strong>Affiliate Contact Name: </strong>{{site['Affiliate contact name']}}</p>
           <p><strong>Affiliate Contact Email: </strong>{{site['Affiliate contact email']}}</p>
           <p>{{site['Site Description']}}</p>
           <p ng-hide="site['Site Description']">No site description provided.</p>
-          <h4>{{stud_sum}} UMB Student<span ng-hide="stud_sum == 1">s</span> Involved</h4>
+          <h4>{{stud_sum}} University of Maryland Baltimore Student<span ng-hide="stud_sum == 1">s</span> Involved</h4>
           <div class="row">
             <!-- left pie -->
             <div class="col-md-6">
@@ -48,18 +49,20 @@
         </div>
         <!-- right side of modal - bar charts -->
         <div class="col-md-5">
-          <h1>What&#39s Happening Here</h1>
-          <h4>{{site.CSA}}</h4>
+          <h1>What&#39s Happening In {{site.CSA}}</h1>
           <div class="bar-wrapper">
             <h4>Median Income</h4>
+            <p class="description">Blurb goes here</p>
             <chartist class="ct-chart ct-golden-section" chartist-data="incomeData" chartist-events="" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
           </div>
           <div class="bar-wrapper">
             <h4>School Absenteeism</h4>
+            <p class="description">Blurb goes here</p>
             <chartist class="ct-chart ct-golden-section" chartist-data="schoolData" chartist-events="" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
           </div>
           <div class="bar-wrapper bw-last">
             <h4>Life Expectancy</h4>
+            <p class="description">Blurb goes here</p>
             <chartist class="ct-chart ct-golden-section" chartist-data="lifeData" chartist-events="" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
           </div>
         </div>
@@ -73,30 +76,34 @@
 
 <!-- MAP -->
 <div class="container">
-  <div class="row well">
-    <div class="header-container">
-      <div class="header-container-inner">
-        <div class="page-header">
-          <h1>University of Maryland Baltimore Students Working in Baltimore</h1>
-        </div>
-        <p class="help-block">Interactive Map provided in thanks to a generous grant from the
+	<div class="row">
+	<h2>University of Maryland Baltimore: Students Working in Baltimore</h2>
+	</div>
+  <div class="row">
+	  
+   
+      
+        <p class="sponsor">Interactive Map provided in thanks to a generous grant from the
         Joseph and Harvey Meyerhoff Family Charitable Funds and the Social Work Community Outreach Service (SWCOS)</p>
-      </div>
-      </div>
+     
+   
 
-    <div class="col-lg-9">
-      <span popover-placement="right" class="glyphicon glyphicon-info-sign" popover="Click on a yellow marker within the map to display information about that Site"></span>
+    <div class="col-md-9">
+	  <div class="colWrap">  
+      <div class="instructions">Click on a yellow marker within the map to display information about individual Sites</div>
 
-      <ui-gmap-google-map center='map.center' zoom='map.zoom'>
+      <ui-gmap-google-map center='map.center' zoom='map.zoom' options="map.mapOptions">
 
         <ui-gmap-markers models="siteMarkers" click="'displaySiteData'" coords="'self'" icon="'icon'">
         </ui-gmap-markers>
 
       </ui-gmap-google-map>
     </div>
+    </div>
 
-    <div class="col-lg-3 col-sm-6">
-      <p class="help-block"><span></span>Filter By School<span></span></p>
+    <div class="col-md-3 col-sm-6">
+	    <div class="colWrap">
+      <p class="help-block">Filter By School</p>
       <ul class="list-group">
         <li class="list-group-item" ng-repeat="school in siteSchools">
           <div class="row">
@@ -110,9 +117,10 @@
           </div>
         </li>
       </ul>
+      </div>
 
-
-        <p class="help-block"><span></span>Filter By Affiliate<span></span></p>
+	  	<div class="colWrap">
+        <p class="help-block">Filter By Affiliate</p>
         <ul class="list-group">
           <li class="list-group-item" ng-repeat="affiliate in siteAffiliates">
             <div class="row">
@@ -126,6 +134,7 @@
             </div>
           </li>
         </ul>
+	  	</div>
       </div>
   </div>
 </div>
