--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,6 +12,7 @@ $social_work: #ffcb00;
 $dark_grey: #1a1a1a;
 $marker_: #ffe202;
 $swcos_red: rgba(229, 25, 55,1);
+$modal_body: #4f4f4f;
 
 .browsehappy {
   margin: 0.2em 0;
@@ -334,6 +335,17 @@ p > span {
   }
 }.ct-label {
   display:none;
+}
+.pieChart {
+  .list-group-item {
+    background:none;
+    border:none;
+    .badge{
+      background:none;
+      color:$modal_body;
+    }
+  }
+
 }
 .school-label{
   margin:-4px;
