--- a/app/views/map.html
+++ b/app/views/map.html
@@ -10,6 +10,7 @@
         <div class="col-md-5">
           <h1>{{site.Site}}</h1>
           <h4>{{site.CSA}}</h4>
+          <p><strong>Affiliate Website: </strong><a ng-hide="!site['Affiliate website']" href="{{site['Affiliate website']}}" target="_blank">{{site['Affiliate website']}}</a></p>
           <p><strong>Affiliate Contact Name: </strong>{{site['Affiliate contact name']}}</p>
           <p><strong>Affiliate Contact Email: </strong>{{site['Affiliate contact email']}}</p>
           <p>{{site['Site Description']}}</p>
