--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -45,7 +45,7 @@ $modal_body: #4f4f4f;
 
 //main container for front end
 .container {
-  background:url("/images/main-background-umb.png") center center repeat;
+  background:url("http://134.192.116.210/node/SwcosClientMap/app/images/main-background-umb.png") center center repeat;
   border-radius: 4px;
   overflow:hidden;
   border: 1px solid $UMBdkGrey;
