--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -370,8 +370,8 @@ th {
 }
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url("../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/glyphicons-halflings-regular.eot");
-  src: url("../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/glyphicons-halflings-regular.woff2") format("woff2"), url("../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/glyphicons-halflings-regular.woff") format("woff"), url("../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/glyphicons-halflings-regular.ttf") format("truetype"), url("../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg");
+  src: url("../fonts/bootstrap/glyphicons-halflings-regular.eot");
+  src: url("../fonts/bootstrap/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/bootstrap/glyphicons-halflings-regular.woff2") format("woff2"), url("../fonts/bootstrap/glyphicons-halflings-regular.woff") format("woff"), url("../fonts/bootstrap/glyphicons-halflings-regular.ttf") format("truetype"), url("../fonts/bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg");
 }
 /* line 22, ../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_glyphicons.scss */
 .glyphicon {
@@ -9538,28 +9538,28 @@ body.modal-open .supreme-container {
   padding-top: 30%;
 }
 
-/* line 47, main.scss */
+/* line 44, main.scss */
 .container {
-  background: url("/images/main-background-umb.png") center center repeat;
+  background: url("http://134.192.116.210/node/SwcosClientMap/app/images/main-background-umb.png") center center repeat;
   border-radius: 4px;
   overflow: hidden;
   border: 1px solid #1a1a1a;
 }
 
-/* line 55, main.scss */
+/* line 52, main.scss */
 .colWrap {
   border-radius: 4px;
   overflow: hidden;
 }
 
-/* line 60, main.scss */
+/* line 57, main.scss */
 .angular-google-map-container {
   height: 832px;
   max-height: 832px;
   border: 1px solid #D8D6D6;
 }
 
-/* line 67, main.scss */
+/* line 64, main.scss */
 .list-group-item {
   padding: 10px 5px;
   padding-bottom: 0px !important;
