--- a/app/styles/modal.css
+++ b/app/styles/modal.css
@@ -1,74 +1,23 @@
-/*
-Error: Undefined variable: "$UMBltGrey".
-        on line 21 of /Users/EBSrockyMtn/Sites/SwcosClientMap/app/styles/modal.scss
+ .modal-dialog {
+   width:75%;
+ }
 
-16: .modal-dialog {
-17:   width:75%;
-18: }
-19: 
-20: .modal-body{
-21:   color:$UMBltGrey;
-22:   .row {
-23:     h1{
-24:       text-transform:uppercase;
-25:       font-size:20px;
-26:     }
+ .modal-body{
+   color:$UMBltGrey;
+   .row {
+     h1{
+       text-transform:uppercase;
+       font-size:20px;
+     }
 
-Backtrace:
-/Users/EBSrockyMtn/Sites/SwcosClientMap/app/styles/modal.scss:21
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/script/tree/variable.rb:49:in `_perform'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/script/tree/node.rb:50:in `perform'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:384:in `visit_prop'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:79:in `block in with_base'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:115:in `with_frame'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:79:in `with_base'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:420:in `block (2 levels) in visit_rule'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:420:in `map'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:420:in `block in visit_rule'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:418:in `visit_rule'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:79:in `block in with_base'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:115:in `with_frame'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:79:in `with_base'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:52:in `map'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:157:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/root_node.rb:20:in `render'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/engine.rb:268:in `render'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/plugin/compiler.rb:209:in `each'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/sass_compiler.rb:40:in `compile!'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/commands/update_project.rb:49:in `perform'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/commands/base.rb:18:in `execute'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/commands/project_base.rb:19:in `execute'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/exec/sub_command_ui.rb:15:in `run!'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/bin/compass:30:in `block in <top (required)>'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/bin/compass:44:in `call'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/bin/compass:44:in `<top (required)>'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/bin/compass:23:in `load'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/bin/compass:23:in `<main>'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/bin/ruby_executable_hooks:15:in `eval'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/bin/ruby_executable_hooks:15:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Undefined variable: \"$UMBltGrey\".\A         on line 21 of /Users/EBSrockyMtn/Sites/SwcosClientMap/app/styles/modal.scss\A \A 16: .modal-dialog {\A 17:   width:75%;\A 18: }\A 19: \A 20: .modal-body{\A 21:   color:$UMBltGrey;\A 22:   .row {\A 23:     h1{\A 24:       text-transform:uppercase;\A 25:       font-size:20px;\A 26:     }"; }
+body.modal-open .supreme-container{
+-o-filter: blur(15px);
+-ms-filter: blur(15px);
+filter: blur(15px);
+filter: url("data:image/svg+xml;utf9,<svg%20version='1.1'%20xmlns='http://www.w3.org/2000/svg'><filter%20id='blur'><feGaussianBlur%20stdDeviation='10'%20/></filter></svg>#blur");
+filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='10');
+-webkit-filter: blur(15px);
+-webkit-box-shadow: inset 6px 6px 31px 0px rgba(135,135,135,0.71);
+-moz-box-shadow: inset 6px 6px 31px 0px rgba(135,135,135,0.71);
+box-shadow: inset 6px 6px 31px 0px rgba(135,135,135,0.71);
+}
