--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -24,9 +24,9 @@
 
 // reset for drupal block view
 .UMBmapApplication {
-	.block ul {
-		padding-left: 0px;
-		margin-top:0px;
+	.block ul, ul.listgroup {
+		padding-left: 0px !important;
+		margin-top:0px !important;
 	}
 	
 }
