--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -74,6 +74,8 @@ $modal_body: #4f4f4f;
   border-radius: 4px;
   overflow:hidden;
   border: 1px solid $UMBdkGrey;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 // wrapper for that fresh, rounded borders look
