--- a/app/styles/modal.css
+++ b/app/styles/modal.css
@@ -1,23 +1,53 @@
- .modal-dialog {
-   width:75%;
- }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/modal\.scss}line{font-family:\000034}}
+body.modal-open .supreme-container {
+  -o-filter: blur(45px);
+  -ms-filter: blur(45px);
+  filter: blur(45px);
+  filter: url("data:image/svg+xml;utf9,<svg%20version='1.1'%20xmlns='http://www.w3.org/2000/svg'><filter%20id='blur'><feGaussianBlur%20stdDeviation='10'%20/></filter></svg>#blur");
+  filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='10');
+  -webkit-filter: blur(45px);
+  -webkit-box-shadow: inset 6px 6px 31px 0px rgba(135, 135, 135, 0.71);
+  -moz-box-shadow: inset 6px 6px 31px 0px rgba(135, 135, 135, 0.71);
+  box-shadow: inset 6px 6px 31px 0px rgba(135, 135, 135, 0.71);
+}
 
- .modal-body{
-   color:$UMBltGrey;
-   .row {
-     h1{
-       text-transform:uppercase;
-       font-size:20px;
-     }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/modal\.scss}line{font-family:\0000316}}
+.modal-dialog {
+  width: 75%;
+}
 
-body.modal-open .supreme-container{
--o-filter: blur(15px);
--ms-filter: blur(15px);
-filter: blur(15px);
-filter: url("data:image/svg+xml;utf9,<svg%20version='1.1'%20xmlns='http://www.w3.org/2000/svg'><filter%20id='blur'><feGaussianBlur%20stdDeviation='10'%20/></filter></svg>#blur");
-filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='10');
--webkit-filter: blur(15px);
--webkit-box-shadow: inset 6px 6px 31px 0px rgba(135,135,135,0.71);
--moz-box-shadow: inset 6px 6px 31px 0px rgba(135,135,135,0.71);
-box-shadow: inset 6px 6px 31px 0px rgba(135,135,135,0.71);
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/modal\.scss}line{font-family:\0000320}}
+.modal-body {
+  color: #4f4f4f;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/modal\.scss}line{font-family:\0000323}}
+.modal-body .row h1 {
+  text-transform: uppercase;
+  font-size: 20px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/modal\.scss}line{font-family:\0000330}}
+.swcos-close {
+  float: right;
+  text-transform: uppercase;
+  color: #FFF;
+  background: #ffe202;
+  border: none;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/modal\.scss}line{font-family:\0000338}}
+.modal-backdrop {
+  background: #FFF;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/modal\.scss}line{font-family:\0000341}}
+.modal {
+  background: rgba(252, 252, 252, 0.4);
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/modal\.scss}line{font-family:\0000344}}
+.modal-content {
+  background: rgba(252, 252, 252, 0);
+  border: none;
+  box-shadow: none;
 }
