--- a/app/styles/modal.scss
+++ b/app/styles/modal.scss
@@ -2,12 +2,12 @@
 
 //modal background
 body.modal-open .supreme-container{
-  -o-filter: blur(15px);
-  -ms-filter: blur(15px);
-  filter: blur(15px);
+  -o-filter: blur(45px);
+  -ms-filter: blur(45px);
+  filter: blur(45px);
   filter: url("data:image/svg+xml;utf9,<svg%20version='1.1'%20xmlns='http://www.w3.org/2000/svg'><filter%20id='blur'><feGaussianBlur%20stdDeviation='10'%20/></filter></svg>#blur");
   filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='10');
-  -webkit-filter: blur(15px);
+  -webkit-filter: blur(45px);
   -webkit-box-shadow: inset 6px 6px 31px 0px rgba(135,135,135,0.71);
   -moz-box-shadow: inset 6px 6px 31px 0px rgba(135,135,135,0.71);
   box-shadow: inset 6px 6px 31px 0px rgba(135,135,135,0.71);
@@ -18,7 +18,7 @@ body.modal-open .supreme-container{
 }
 
 .modal-body{
-  color:$UMBltGrey;
+  color:#4f4f4f;
   .row {
     h1{
       text-transform:uppercase;
@@ -30,13 +30,13 @@ body.modal-open .supreme-container{
 .swcos-close{
   float:right;
   text-transform:uppercase;
-  color:$UMBwhite;
-  background:$UMBgold;
+  color:#FFF;
+  background:#ffe202;
   border:none;
   }
 
 .modal-backdrop {
-  background:$UMBwhite;
+  background:#FFF;
 }
 .modal{
   background:rgba(252, 252, 252, 0.4);
