--- a/app/styles/charts.css
+++ b/app/styles/charts.css
@@ -40,6 +40,17 @@ Backtrace:
 /Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:115:in `with_frame'
 /Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:79:in `with_base'
 /Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:158:in `visit'
+/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:420:in `block (2 levels) in visit_rule'
+/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:420:in `map'
+/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:420:in `block in visit_rule'
+/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
+/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:418:in `visit_rule'
+/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
+/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:79:in `block in with_base'
+/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:115:in `with_frame'
+/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:79:in `with_base'
+/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:158:in `visit'
 /Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
 /Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:52:in `map'
 /Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:52:in `visit_children'
