--- a/app/styles/charts.scss
+++ b/app/styles/charts.scss
@@ -1,4 +1,4 @@
-
+.UMBmapApplication {
 // Modal bar charts
 .bar-wrapper{
   padding: 10px;
@@ -142,3 +142,4 @@
   padding-top:30%;
 }
 // END Pie Charts ----------------------------------------------
+}
