--- a/app/styles/filters.css
+++ b/app/styles/filters.css
@@ -1,74 +1,57 @@
-/*
-Error: Undefined variable: "$UMBgold".
-        on line 33 of /Users/EBSrockyMtn/Sites/SwcosClientMap/app/styles/filters.scss
-
-28: 
-29: 
-30: .school:checked + .school__label:after {
-31:   content: '';
-32:   //background: $social_work;
-33:   background: $UMBgold;
-34: }
-35: .school:checked + .school__label[id="test"]:after {
-36:   content: '';
-37:   background: #00a9bc;
-38: }
-
-Backtrace:
-/Users/EBSrockyMtn/Sites/SwcosClientMap/app/styles/filters.scss:33
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/script/tree/variable.rb:49:in `_perform'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/script/tree/node.rb:50:in `perform'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:384:in `visit_prop'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:79:in `block in with_base'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:115:in `with_frame'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:79:in `with_base'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:420:in `block (2 levels) in visit_rule'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:420:in `map'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:420:in `block in visit_rule'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:418:in `visit_rule'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:79:in `block in with_base'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:115:in `with_frame'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:79:in `with_base'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:52:in `map'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:157:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/root_node.rb:20:in `render'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/engine.rb:268:in `render'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/plugin/compiler.rb:209:in `each'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/sass_compiler.rb:40:in `compile!'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/commands/update_project.rb:49:in `perform'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/commands/base.rb:18:in `execute'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/commands/project_base.rb:19:in `execute'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/exec/sub_command_ui.rb:15:in `run!'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/bin/compass:30:in `block in <top (required)>'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/bin/compass:44:in `call'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/bin/compass:44:in `<top (required)>'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/bin/compass:23:in `load'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/bin/compass:23:in `<main>'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/bin/ruby_executable_hooks:15:in `eval'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/bin/ruby_executable_hooks:15:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Undefined variable: \"$UMBgold\".\A         on line 33 of /Users/EBSrockyMtn/Sites/SwcosClientMap/app/styles/filters.scss\A \A 28: \A 29: \A 30: .school:checked + .school__label:after {\A 31:   content: '';\A 32:   //background: $social_work;\A 33:   background: $UMBgold;\A 34: }\A 35: .school:checked + .school__label[id=\"test\"]:after {\A 36:   content: '';\A 37:   background: #00a9bc;\A 38: }"; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/filters\.scss}line{font-family:\000033}}
+.UMBmapApplication .school {
+  visibility: hidden;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/filters\.scss}line{font-family:\000037}}
+.UMBmapApplication .school__label {
+  background-color: rgba(26, 26, 26, 0);
+  padding: 9px;
+  border-radius: 70px;
+  display: inline-block;
+  position: relative;
+  margin-right: 10px;
+  width: 58px;
+  height: 30px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/filters\.scss}line{font-family:\0000319}}
+.UMBmapApplication .school__label:after {
+  content: '';
+  position: absolute;
+  background: lightgray;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 70px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/filters\.scss}line{font-family:\0000331}}
+.UMBmapApplication .school:checked + .school__label:after {
+  content: '';
+  background: #ffe202;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/filters\.scss}line{font-family:\0000336}}
+.UMBmapApplication .school:checked + .school__label[id="test"]:after {
+  content: '';
+  background: #00a9bc;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/filters\.scss}line{font-family:\0000341}}
+.UMBmapApplication .school__label:before {
+  content: '';
+  position: absolute;
+  background: white;
+  top: 2px;
+  left: 2px;
+  z-index: 2;
+  width: 25px;
+  height: 25px;
+  border-radius: 100px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/filters\.scss}line{font-family:\0000353}}
+.UMBmapApplication .school:checked + .school__label:before {
+  left: 31px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/filters\.scss}line{font-family:\0000357}}
+.UMBmapApplication .school__label:after, .UMBmapApplication .school__label:before {
+  -webkit-transition: background 0.2s ease-out, left 0.2s ease-out;
+  -moz-transition: background 0.2s ease-out, left 0.2s ease-out;
+}
