--- a/app/styles/type.scss
+++ b/app/styles/type.scss
@@ -1,25 +1,32 @@
 //Main
+.UMBmapApplication {
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  font-family: sans-serif;
+
+}
+
 
 //top title
 h2 {
-	background-color: $UMBdkGrey;
 	text-align: center;
-	color: $UMBwhite;
-	font-size: 1.3em;
+	color: #1a1a1a;
+	font-weight: normal;
+	font-size: 1.5em;
 	padding: 5px;
 	margin: 0px;
 }
 // Top text on sponsors
 .sponsor {
 	text-align: center;
-	font-style: italic;
+	
 	padding: 15px;
 }
 // Instructions above map
 .instructions {
 	text-align: center;
-	background-color: #ccc;
-	font-style: italic;
+	background-color: #d3d3d3;
+	
 	padding: 5px;
 }
 // Filter titles
@@ -28,9 +35,9 @@ h2 {
   margin-bottom: 0px;
   text-align: center;
   width:100%;
-  background-color: $UMBgold;
-  color: $UMBblack;
-  font-style: italic;
+  
+  color: #000;
+  
   padding: 5px;
 }
 
@@ -52,4 +59,5 @@ h2 {
 			background: none;
 		}
 	}
+}
 }
