--- a/app/styles/charts.css
+++ b/app/styles/charts.css
@@ -1,89 +1,165 @@
-/*
-Error: Undefined variable: "$UMBmodalBarA".
-        on line 33 of /Users/EBSrockyMtn/Sites/SwcosClientMap/app/styles/charts.scss
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\000034}}
+.bar-wrapper {
+  padding: 10px;
+  border-top: 1px solid rgba(51, 51, 51, 0.2);
+  border-left: 1px solid rgba(51, 51, 51, 0.2);
+  border-right: 1px solid rgba(51, 51, 51, 0.2);
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\000039}}
+.bar-wrapper h4 {
+  margin-top: 0px;
+}
 
-28: }
-29: 
-30: // Bar colors
-31: .ct-bar {
-32: // color 1
-33:   stroke:$UMBmodalBarA !important;
-34:   stroke-width:23px !important;
-35:   // color 2
-36:   &:nth-child(2){
-37:     stroke:$UMBmodalBarB !important;
-38:   }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000313}}
+.bw-last {
+  border-bottom: 1px solid rgba(51, 51, 51, 0.2);
+}
 
-Backtrace:
-/Users/EBSrockyMtn/Sites/SwcosClientMap/app/styles/charts.scss:33
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/script/tree/variable.rb:49:in `_perform'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/script/tree/node.rb:50:in `perform'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/script/tree/list_literal.rb:62:in `block in _perform'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/script/tree/list_literal.rb:62:in `map'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/script/tree/list_literal.rb:62:in `_perform'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/script/tree/node.rb:50:in `perform'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:384:in `visit_prop'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:79:in `block in with_base'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:115:in `with_frame'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:79:in `with_base'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:420:in `block (2 levels) in visit_rule'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:420:in `map'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:420:in `block in visit_rule'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:418:in `visit_rule'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:79:in `block in with_base'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:115:in `with_frame'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:79:in `with_base'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:420:in `block (2 levels) in visit_rule'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:420:in `map'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:420:in `block in visit_rule'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:418:in `visit_rule'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:79:in `block in with_base'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:115:in `with_frame'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/stack.rb:79:in `with_base'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:52:in `map'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:157:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/tree/root_node.rb:20:in `render'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/engine.rb:268:in `render'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/plugin/compiler.rb:209:in `each'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/sass-3.4.3/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/sass_compiler.rb:40:in `compile!'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/commands/update_project.rb:49:in `perform'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/commands/base.rb:18:in `execute'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/commands/project_base.rb:19:in `execute'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/lib/compass/exec/sub_command_ui.rb:15:in `run!'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/bin/compass:30:in `block in <top (required)>'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/bin/compass:44:in `call'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/gems/compass-1.0.1/bin/compass:44:in `<top (required)>'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/bin/compass:23:in `load'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/bin/compass:23:in `<main>'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/bin/ruby_executable_hooks:15:in `eval'
-/Users/EBSrockyMtn/.rvm/gems/ruby-2.1.1/bin/ruby_executable_hooks:15:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Undefined variable: \"$UMBmodalBarA\".\A         on line 33 of /Users/EBSrockyMtn/Sites/SwcosClientMap/app/styles/charts.scss\A \A 28: }\A 29: \A 30: // Bar colors\A 31: .ct-bar {\A 32: // color 1\A 33:   stroke:$UMBmodalBarA !important;\A 34:   stroke-width:23px !important;\A 35:   // color 2\A 36:   &:nth-child(2){\A 37:     stroke:$UMBmodalBarB !important;\A 38:   }"; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000317}}
+.ct-label.ct-horizontal {
+  text-align: center !important;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000320}}
+.ct-label {
+  font-size: 1.2rem !important;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000323}}
+.bars {
+  text-align: center;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000325}}
+.bar-sec {
+  padding-top: 10px;
+  border-top: 1px solid lightgray;
+  border-left: 1px solid lightgray;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000332}}
+.ct-bar {
+  stroke: rgba(26, 26, 26, 0.99) !important;
+  stroke-width: 23px !important;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000337}}
+.ct-bar:nth-child(2) {
+  stroke: rgba(26, 26, 26, 0.85) !important;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000341}}
+.ct-bar:nth-child(3) {
+  stroke: rgba(26, 26, 26, 0.65) !important;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000344}}
+.ct-label {
+  display: none;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000350}}
+.pieChart .list-group-item {
+  background: none;
+  border: none;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000354}}
+.pieChart .list-group-item .badge {
+  background: none;
+  color: #fff;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000358}}
+.pieChart .list-group-item:nth-child(1) .badge {
+  background-color: #e51837;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000361}}
+.pieChart .list-group-item:nth-child(2) .badge {
+  background-color: #00a9bc;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000364}}
+.pieChart .list-group-item:nth-child(3) .badge {
+  background-color: #ffcb00;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000367}}
+.pieChart .list-group-item:nth-child(4) .badge {
+  background-color: #8cc63f;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000370}}
+.pieChart .list-group-item:nth-child(5) .badge {
+  background-color: #4f4f4f;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000377}}
+.pieChart .list-group-item.disc:nth-child(1) .badge {
+  background-color: #037F3B;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000380}}
+.pieChart .list-group-item.disc:nth-child(2) .badge {
+  background-color: #9E005D;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000383}}
+.pieChart .list-group-item.disc:nth-child(3) .badge {
+  background-color: #F15A24;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000386}}
+.pieChart .list-group-item.disc:nth-child(4) .badge {
+  background-color: #0073BA;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000389}}
+.pieChart .list-group-item.disc:nth-child(5) .badge {
+  background-color: #4f4f4f;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\0000397}}
+.schools .ct-chart .ct-series.ct-series-a .ct-slice:not(.ct-donut) {
+  fill: #e51837;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\00003100}}
+.schools .ct-chart .ct-series.ct-series-b .ct-slice:not(.ct-donut) {
+  fill: #00a9bc;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\00003103}}
+.schools .ct-chart .ct-series.ct-series-c .ct-slice:not(.ct-donut) {
+  fill: #ffcb00;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\00003106}}
+.schools .ct-chart .ct-series.ct-series-d .ct-slice:not(.ct-donut) {
+  fill: #8cc63f;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\00003109}}
+.schools .ct-chart .ct-series.ct-series-e .ct-slice:not(.ct-donut) {
+  fill: #4f4f4f;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\00003116}}
+.discipline .ct-chart .ct-series.ct-series-a .ct-slice:not(.ct-donut) {
+  fill: #037F3B;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\00003119}}
+.discipline .ct-chart .ct-series.ct-series-b .ct-slice:not(.ct-donut) {
+  fill: #9E005D;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\00003122}}
+.discipline .ct-chart .ct-series.ct-series-c .ct-slice:not(.ct-donut) {
+  fill: #F15A24;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\00003125}}
+.discipline .ct-chart .ct-series.ct-series-d .ct-slice:not(.ct-donut) {
+  fill: #0073BA;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\00003128}}
+.discipline .ct-chart .ct-series.ct-series-e .ct-slice:not(.ct-donut) {
+  fill: #4f4f4f;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\00003134}}
+.school-label {
+  margin: -4px;
+  margin-right: 4px;
+  width: 20px;
+  height: 20px;
+  border: none;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/charts\.scss}line{font-family:\00003142}}
+.no-student-data {
+  display: inherit;
+  padding-top: 30%;
+}
