--- a/app/styles/type.scss
+++ b/app/styles/type.scss
@@ -1,3 +1,4 @@
+@import "variables.scss";
 //Main
 .UMBmapApplication {
 h1, h2, h3, h4, h5, h6,
@@ -26,7 +27,6 @@ h2 {
 .instructions {
 	text-align: center;
 	background-color: #d3d3d3;
-	
 	padding: 5px;
 }
 // Filter titles
